# popo_hyjoe_ws

./: local.conf
homecare_robot_core_2026/: pyproject.toml
homecare_robot_core_2026/assets/: mp3_to_wav.sh
homecare_robot_core_2026/assets/tts/: readme.txt
homecare_robot_core_2026/configs/: everybot.yaml  feature_settings.json  hw_components.yaml  program_schedule.json  robot_settings.json
homecare_robot_core_2026/configs/camera_info/: web_cam.yaml
homecare_robot_core_2026/configs/map/: map.yaml  waypoints.json
homecare_robot_core_2026/configs/save/260518map/: feature_settings.json  roi_zones.json  waypoints.json
homecare_robot_core_2026/configs/save/260526map/: map.pgm  roi_zones.json
homecare_robot_core_2026/configs/save/map_pyeonchang/: feature_settings.json  map.pgm  map.yaml  roi_zones.json  waypoints.json
homecare_robot_core_2026/scripts/: mqtt_inject.py
homecare_robot_core_2026/scripts/orangepi_network/: 10-orangepi-usb-ethernet.link  90-orangepi-nat  README.md  install.sh  orangepi-nat.sh  orangepi-network-common.sh  orangepi-network-setup.sh  orangepi-network.conf  orangepi-network.service
homecare_robot_core_2026/src/everybot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
homecare_robot_core_2026/src/everybot/app/: wiring.py
homecare_robot_core_2026/src/everybot/bt/: blackboard.py  debug.py  nodes.py
homecare_robot_core_2026/src/everybot/config/: schema.py
homecare_robot_core_2026/src/everybot/drivers/: softap_manager.py
homecare_robot_core_2026/src/everybot/interfaces/: ha_client.py  pubsub.py  wired_control_server.py
homecare_robot_core_2026/src/everybot/services/: amr_service.py  interfaces.py  jetson_ai_service.py  main_service.py  map_creation_server.py  mobile_provision_service.py  mqtt_service.py  ui_mqtt_service.py
homecare_robot_core_2026/src/everybot/utils/: beam_projector_util.py  state_store.py  waypoint_manager.py
homecare_robot_core_2026/src/everybot_dump/: __main__.py
homecare_robot_core_2026/src/everybot_dump/bt/: debug.py  message_types.py  runner.py
homecare_robot_core_2026/src/everybot_dump/drivers/: wifi_manager.py
homecare_robot_core_2026/src/everybot_dump/interfaces/: ha_client.py  mobile_provision_server.py
homecare_robot_core_2026/src/everybot_dump/services/: amr_service.py  base.py  interfaces.py  jetson_ai_service.py  map_creation_server.py  wired_control_service.py
homecare_robot_core_2026/src/everybot_dump/services/mock/: ai_mock.py  wired_mock.py
homecare_robot_core_2026/src/everybot_dump/utils/: settings_schema.py  zone_manager.py
homecare_robot_core_2026/src/hw/fastdds_config/: fastdds.xml
homecare_robot_core_2026/src/hw/hw_manager/: camera_recorder.py  mic_manager.py  rf_manager.py  speaker_manager.py
homecare_robot_core_2026/src/hw/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
homecare_robot_core_2026/src/hw/install/inusensor_ros2_driver/share/ament_index/resource_index/package_run_dependencies/: inusensor_ros2_driver
homecare_robot_core_2026/src/hw/install/inusensor_ros2_driver/share/ament_index/resource_index/parent_prefix_path/: inusensor_ros2_driver
homecare_robot_core_2026/src/hw/install/inusensor_ros2_driver/share/inusensor_ros2_driver/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
homecare_robot_core_2026/src/hw/install/inusensor_ros2_driver/share/inusensor_ros2_driver/cmake/: inusensor_ros2_driverConfig.cmake
homecare_robot_core_2026/src/hw/install/inusensor_ros2_driver/share/inusensor_ros2_driver/config/: camera_params.yaml
homecare_robot_core_2026/src/hw/install/inusensor_ros2_driver/share/inusensor_ros2_driver/launch/: inusensor.launch.py
homecare_robot_core_2026/src/hw/install/inusensor_ros2_driver/share/inusensor_ros2_driver/urdf/: m4_51s.urdf.xacro
homecare_robot_core_2026/src/hw/src/depth_pointcloud_converter/: CMakeLists.txt  package.xml
homecare_robot_core_2026/src/hw/src/depth_pointcloud_converter/launch/: depth_to_pointcloud.launch.py
homecare_robot_core_2026/src/hw/src/depth_pointcloud_converter/rviz/: pointcloud.rviz
homecare_robot_core_2026/src/hw/src/depth_pointcloud_converter/src/: depth_to_pointcloud_node.cpp
homecare_robot_core_2026/src/hw/src/inusensor_ros2_driver/: CMakeLists.txt
homecare_robot_core_2026/src/hw/src/inusensor_ros2_driver/config/: sensor_config.yaml
homecare_robot_core_2026/src/hw/src/inusensor_ros2_driver/include/inusensor_ros2_driver/: inusensor_manager.hpp  inusensor_node.hpp
homecare_robot_core_2026/src/hw/src/inusensor_ros2_driver/src/: inusensor_manager.cpp  inusensor_node.cpp  main.cpp
homecare_robot_core_2026/systemd/: everybot.service  hw_bringup.service  hw_bringup.sh
test-guide/: patrol-resume-arrival-guard-jetson-test.md  results-2026-05-22-patrol-resume-run-2.md
